@@ -1,3 +1,4 @@
+Matching Game tab: Fixed centering of fractions
 # 0.00.04 (57665) Oct 15, 2011
 Added pie representation
 # 0.00.03 (57658) Oct 14, 2011
